--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-regex = "1.11.0"
-rand = "0.9.0-alpha.2"
+axum = {version = "0.7.7", features = ["ws"]}
+tokio = {version = "1.41.1", features = ["full"]}
+futures = "0.3.31"
+tracing = "0.1.40"
+tower-http = { version = "0.6.1", features = ["fs", "trace", "limit"] }
+tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
+rand = "0.8.5"
+
+serde = {version = "1.0.215", features = ["derive"]}
+serde_json = "1.0.132"
